[package]
name = "uniswapx-artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniswapx-rs = { path = "./crates/uniswapx-rs" }
bindings-uniswapx = { path = "./crates/bindings-uniswapx" }
bindings-swaprouter-executor = { path = "./crates/bindings-swaprouter-executor" }

artemis-core = { git = "https://github.com/paradigmxyz/artemis"}
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", features = ["derive"] }
phyllo = "0.3.0"
serde = "1.0.168"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
tokio-stream = "0.1.14"
reqwest = "0.11.18"
alloy-primitives = "0.2.0"
serde_qs = "0.12.0"
async-stream = "0.3.5"
