[package]
name = "uniswapx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { git = "https://github.com/alloy-rs/core.git", branch = "main" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core.git", branch = "main" }
alloy-dyn-abi = { git = "https://github.com/alloy-rs/core.git", branch = "main" }
anyhow = "1.0.70"
ethers = "2.0.7"
hex = "0.4.3"
